# safety-patrol-drone

./: .gitignore  README.md  pyproject.toml
diagram/: drone_logic.drawio
docs/: gui.drawio
notebooks/: deep_learning_drone.ipynb  experiments.ipynb  rtdetr_transfer.ipynb  yolov11n-scratch.ipynb
src/: main.py
src/communication/: dji_api.py
src/ui/elements/: debug_widget.py  dropdown.py  generic_button.py  spinbox.py
src/ui/widgets/: battery_widget.py  live_feed_widget.py  map_widget.py  object_log_widget.py  status_bar_widget.py
src/ui/windows/: main_window.py  popup_window_drone_controls.py  popup_window_drone_debug.py
src/utils/: position.py  video_worker.py
