[project]
name = "safety-drone-app"
version = "0.1.0"
description = "Warehouse safety drone application"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # GUI
    "pyside6==6.7.0",
    "qdarkstyle",

    # ML / YOLO
    "ultralytics==8.1.0",

    # PyTorch
    "torch==2.2.2",
    "torchvision==0.17.2",

    # Data handling
    "numpy==1.26.4",
    "pandas==2.2.2",

    # Image processing
    "opencv-python==4.9.0.80",
    "pillow==10.3.0",

    "jupyter",
    "ipykernel",
    "djitellopy"
]
